# janus

./: .gitignore  Cargo.toml  ENGINEERING_SPEC.md
crates/janus-cli/: Cargo.toml
crates/janus-cli/src/: main.rs
crates/janus-core/: Cargo.toml
crates/janus-core/src/: config.rs  distribution.rs  fields.rs  fields3d.rs  grid.rs  grid3d.rs  lib.rs  units.rs  vec2.rs
crates/janus-io/: Cargo.toml
crates/janus-io/src/: header.rs  legacy_vtk.rs  lib.rs  reader.rs  writer.rs
crates/janus-io/tests/: roundtrip.rs
crates/janus-kinetic/: Cargo.toml
crates/janus-kinetic/src/: bc.rs  bc3d.rs  collision.rs  collision3d.rs  coupled.rs  coupled3d.rs  fft.rs  gas_model.rs  kn.rs  lib.rs  maxwellian.rs  maxwellian3d.rs  particles.rs  particles3d.rs  solver.rs  solver3d.rs  spectral_collision.rs  velocity_grid.rs  velocity_grid3d.rs
crates/janus-kinetic/tests/: adversarial.rs  bkw_spectral_validation.rs  couette.rs  sod_shock_tube.rs  transition_regime.rs
crates/janus-sched/: Cargo.toml
crates/janus-sched/examples/: load_balance_bench.rs  load_balance_bench_3d.rs
crates/janus-sched/src/: block.rs  block3d.rs  lib.rs  runner.rs  runner3d.rs
crates/janus-sched/tests/: conservation_under_decomposition.rs
